--- a/style.css
+++ b/style.css
@@ -41,3 +41,51 @@ a.active,
 a:hover {
   background-color: #c59d5f;
 }
+.check_btn{
+  font-size: 30px;
+  margin-right: 40px;
+  line-height: 80px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+/* Navigation menu media query */
+@media (max-width: 900px){
+  .logo h1{
+    font-size: 30px;
+  }
+  .nav_links ul li a{
+    font-size: 13px;
+  }
+}
+@media (max-width: 768px){
+  .check_btn{
+    display: block;
+  }
+  ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #f1f5f8;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    flex-direction: column;
+    transition: all .5s;
+  }
+  .nav_container{
+    background-color: #c59d5f;
+    color: black;
+  }
+  ul li{
+    width: 100%;
+  }
+  ul li a{
+    font-size: 20px;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
+}
