--- a/style.css
+++ b/style.css
@@ -51,6 +51,19 @@ a:hover {
 #check{
   display: none;
 }
+/* Hero section */
+.hero_container{
+  background-image: url('./images/Img1.jpg');
+  text-align: center;
+  margin-top: 15vh;
+}
+.hero_container h3{
+  margin-bottom: 30px;
+}
+.hero_container p{
+  margin-top: 50px;
+  margin-bottom: 8vh;
+}
 /* Navigation menu media query */
 @media (max-width: 900px){
   .logo h1{
