--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ a:hover {
 }
 /* Hero section */
 .hero_container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.hero_container{
   background-image: url('./images/Img1.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -74,12 +80,28 @@ a:hover {
   opacity: 0.6;
   z-index: -1;
 }
-.hero_container h3{
+ h3{
   margin-bottom: 30px;
 }
 .hero_container p{
   margin-top: 50px;
   margin-bottom: 8vh;
+}
+.hero_container .photo{
+  font-family: "Dancing Script", cursive;
+  font-size: 55px;
+  color: #c59d5f;
+  font-weight: bold;
+}
+/* footer */
+.footer{
+  background-color: #c59d5f;
+  color: black;
+  text-align: center;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* Navigation menu media query */
 @media (max-width: 900px){
