--- a/style.css
+++ b/style.css
@@ -77,13 +77,16 @@ a:hover {
   width: 100%;
   height: 100%;
   background-color: black;
-  opacity: 0.6;
+  opacity: 0.7;
   z-index: -1;
 }
  h3{
   margin-bottom: 30px;
+  font-family: "Montserrat", sans-serif;
 }
 .hero_container p{
+  font-family: "Montserrat", sans-serif;
+  color: #c59d5f;
   margin-top: 50px;
   margin-bottom: 8vh;
 }
@@ -98,7 +101,7 @@ a:hover {
   background-color: #c59d5f;
   color: black;
   text-align: center;
-  height: 10vh;
+  height: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
