Added some alignments to the contact section

--- a/style.css
+++ b/style.css
@@ -219,6 +219,38 @@ a:hover {
   width: 300px;
   height: 250px;
 }
+.contact_container{
+  width: 90%;
+  margin: auto;
+  margin-top: 30px;
+  display: flex;
+}
+.contact_img img{
+  width: 550px;
+  margin: 20px;
+}
+.contacts h1{
+  text-align: center;
+  margin-bottom: 30px;
+}
+.contacts p{
+  margin-bottom: 30px;
+}
+.contacts{
+  margin-top: 30px;
+}
+.contacts input{
+  display: block;
+  margin: 30px;
+  width: 400px;
+}
+.contacts textarea{
+  margin: 30px;
+}
+.contacts button{
+  display: block;
+  margin: 30px;
+}
 /* Navigation menu media query */
 @media (max-width: 900px){
   .logo h1{
