--- a/style.css
+++ b/style.css
@@ -226,30 +226,49 @@ a:hover {
   display: flex;
 }
 .contact_img img{
+  margin-top: 50px;
   width: 550px;
   margin: 20px;
 }
 .contacts h1{
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .contacts p{
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  margin-left: 30px;
 }
 .contacts{
   margin-top: 30px;
 }
 .contacts input{
+  margin-bottom: 20px;
   display: block;
   margin: 30px;
-  width: 400px;
+  width: 450px;
+  height: 50px;
+  border: 1px solid #c59d5f;
+  outline: 0;
 }
 .contacts textarea{
+  border: 1px solid #c59d5f;
+  outline: 0;
   margin: 30px;
+  width: 450px;
 }
 .contacts button{
   display: block;
   margin: 30px;
+  height: 45px;
+  width: 100px;
+  border: 1px solid #c59d5f;
+  text-transform: uppercase;
+  font-family: montserrat;
+  background-color: #c59d5f;
+}
+.contacts button:hover{
+  background-color: #f1f5f8;
+  transition: 1s;
 }
 /* Navigation menu media query */
 @media (max-width: 900px){
