--- a/style.css
+++ b/style.css
@@ -219,6 +219,12 @@ a:hover {
   width: 300px;
   height: 250px;
 }
+/* contact section */
+.contact_title{
+  color: #c59d5f;
+  text-align: center;
+  margin-top: 30px;
+}
 .contact_container{
   width: 90%;
   margin: auto;
@@ -280,8 +286,21 @@ a:hover {
   }
 }
 @media (max-width: 768px){
-  .about_container{
+  .contact_container{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+  }
+  .contact_img img{
+    width: 400px;
+    height: 450px;
+  }
+  .about_pic img{
+    width: 450px;
+  }
+  .about_container{
+    width: 400px;
     margin-top: 250px;
     margin-bottom: 250px;
     flex-direction: column;
