--- a/style.css
+++ b/style.css
@@ -221,7 +221,25 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
 }
+.team_container div{
+  height: 340px;
+  background-color: #c59d5f;
+  text-align: center;
+  border-radius: 5px;
+}
 .portfolio_container img{
+  width: 300px;
+  height: 250px;
+}
+/* Team section */
+.team_container{
+  width: 90%;
+  margin: auto;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.team_container img{
   width: 300px;
   height: 250px;
 }
