--- a/style.css
+++ b/style.css
@@ -232,6 +232,13 @@ a:hover {
   height: 250px;
 }
 /* Team section */
+.team_title1{
+  text-align: center;
+  margin-top: 30px;
+  text-transform: uppercase;
+  color: #c59d5f;
+  font-size: 15px;
+}
 .team_container{
   width: 90%;
   margin: auto;
