--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style-type: none;
 }
 
 body{
@@ -24,7 +25,7 @@ body{
 .logo h1 {
   font-family: "Dancing Script", cursive;
 }
-.nav_links ul {
+/* .nav_links ul {
   margin-right: 30px;
   display: flex;
 }
@@ -40,21 +41,63 @@ body{
   border-radius: 4px;
   color: black;
   font-family: "Montserrat", sans-serif;
-}
+} */
 a.active,
 a:hover {
   background-color: #c59d5f;
 }
-.check_btn{
-  font-size: 30px;
-  margin-right: 40px;
+nav{
+  height: 80px;
+  background-color: #c59d5f;
+  position: fixed;
+  width: 100%;
+  margin-bottom: 80px;
+}
+nav ul{
+  float: right;
+  margin-right: 25px;
+}
+nav ul li{
+  display: inline-block;
   line-height: 80px;
+  margin: 0 15px;
+}
+nav ul li a:hover{
+  background-color: #f1f5f8;
+}
+nav ul li a{
+  position: relative;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: montserrat;
+  color: black;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+nav ul li a::before{
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 100%;
+  background: white;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+label #btn,#remove{
+  color: white;
+  font-size: 30px;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
   cursor: pointer;
   display: none;
 }
 #check{
   display: none;
 }
+
 /* Hero section */
 .hero_container{
   display: flex;
@@ -317,8 +360,59 @@ a:hover {
   .logo h1{
     font-size: 30px;
   }
-  .nav_links ul li a{
-    font-size: 13px;
+}
+@media (max-width: 860px) {
+  .hero_container{
+    z-index: -1;
+  }
+  .hero_container::after{
+    z-index: 1;
+  }
+  nav{
+    background-color: #f1f5f8;
+  }
+  label #btn, #remove{
+      display: block;
+      color:  #c59d5f;
+      float: right;
+      font-size: 30px;
+  }
+  nav ul{
+      position: fixed;
+      width: 100%;
+      height: 50vh;
+      background: #c59d5f;
+      top: 80px;
+      left: -100%;
+      transition: all .5s;
+      text-align: center;
+      z-index: -3;
+  }
+  nav ul li a{
+    color: black;
+    text-decoration: none;
+    font-family: montserrat;
+  }
+  nav ul li a:hover{
+    background-color: #f1f5f8;
+    width: 100%;
+  }
+  nav ul li{
+      display: block;
+      line-height: 20px;
+      margin: 30px 0;
+  }
+  #remove{
+    display: none;
+  }
+  #check:checked ~ ul{
+      left: 0;
+  }
+  #check:checked ~ label #btn{
+    display: none;
+  }
+  #check:checked ~ label #remove{
+    display: block;
   }
 }
 @media (max-width: 768px){
@@ -375,29 +469,6 @@ a:hover {
   .team_container img{
     width: 205px;
     height: 200px;
-  }
-  ul{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color: #f1f5f8;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-  }
-  ul li{
-    display: block;
-  }
-  .nav_container{
-    background-color: #c59d5f;
-    color: black;
-  }
-  ul li a{
-    font-size: 20px;
-  }
-  #check:checked ~ ul{
-    left: 0;
   }
 }
 
